Main class  style added in easy-bank.css file.
In this CSS code, specific styles for the main content of a webpage are defined. The 'main' element's overflow is set to hidden, ensuring that any content overflowing its container is hidden from view. The '.home' section has a light gray background and extra padding at the bottom. Inside this section, there is an 'home-img-box' containing an image styled to cover its container and align at the bottom. The 'home-title' class sets the font size, color, and alignment for a large heading in the center of the section, while the 'home-text' class adjusts the font size, color, and line spacing for a paragraph of text beneath the heading. These styles collectively create a visually appealing and well-structured homepage layout for a website.

--- a/easy-bank.css
+++ b/easy-bank.css
@@ -10,6 +10,7 @@
   --px: 18px;
 
 }
+
 *,
 *::before,
 *::after {
@@ -143,4 +144,45 @@ header {
 
 .navbar .btn-primary {
   display: none;
+}
+
+main {
+  overflow: hidden;
+}
+
+.home {
+  background: var(--very-light-gray);
+  padding-bottom: 60px;
+}
+
+.home-img-box {
+  background: url(./images/bg-intro-mobile.svg) no-repeat top;
+  background-size: cover;
+  padding: 0 15px;
+  margin-bottom: 40px;
+}
+
+.home-img-box .home-img {
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+.home-title {
+  font-size: 38px;
+  font-weight: 400;
+  color: var(--dark-blue);
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 0 20px;
+}
+
+.home-text {
+  margin: auto;
+  color: var(--grayish-blue);
+  text-align: center;
+  font-size: 15px;
+  line-height: 1.7;
+  margin-bottom: 30px;
+  padding: 0 20px;
 }
